<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <!-- 상단 제목 -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/primaryColor"
        android:textColor="@color/white"
        android:padding="@dimen/padding_medium"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 중앙 이미지 Placeholder -->
    <ImageView
        android:id="@+id/security_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.8" />

    <!-- 버튼 섹션 -->
    <LinearLayout
        android:id="@+id/button_section"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/security_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- 경비 모드 버튼 -->
        <Button
            android:id="@+id/btn_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:maxWidth="300dp"
            android:layout_marginBottom="@dimen/padding_medium"
            android:padding="16dp"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:text="@string/security_mode_on" />

        <!-- 실시간 영상 버튼 -->
        <Button
            android:id="@+id/btn_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:maxWidth="300dp"
            android:layout_marginBottom="@dimen/padding_medium"
            android:padding="16dp"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:text="@string/live_video" />

        <!-- 침입 기록 버튼 -->
        <Button
            android:id="@+id/btn_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:maxWidth="300dp"
            android:padding="16dp"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"
            android:text="@string/intrusion_records" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
